--- a/index.html
+++ b/index.html
@@ -3,39 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="design">
-            <div class="pill-1 rotate-45"></div>
-            <div class="pill-2 rotate-45"></div>
-            <div class="pill-3 rotate-45"></div>
-            <div class="pill-4 rotate-45"></div>
+    <div class="banner">
+        <div class="content">
+            <h1>EVOLVE.COM</h1>
+            <p>Electric Vehicle Charging Station Locations</p><br>
+            <BR>
+
         </div>
-        <div class="login">
-            <h3 class="title">User Login</h3>
-            <div class="text-input">
-                <i class="ri-user-fill"></i>
-                <input type="text" placeholder="Username">
-            </div>
-            <div class="text-input">
-                <i class="ri-lock-fill"></i>
-                <input type="password" placeholder="Password">
-            </div>
-            <button class="login-btn">LOGIN</button>
-            <a href="#" class="forgot">Forgot Username/Password?</a>
-            <div class="create">
-                <a href="#">Create Your Account</a>
-                <i class="ri-arrow-right-fill"></i>
-            </div>
+        <div class="btn">
+            <button type="button"><a href="login.html">Login</a></button>&nbsp&nbsp&nbsp
+            <button type="button"><a href="reg3.html">Sign up</a></button>
+
         </div>
-    </div>
+
 </body>
 
 </html>
